--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
 	<script src="js/vue.js"></script>
 	<script src="js/jQ.js"></script>
 	<script src="js/technical/break_eternity.js"></script>
+	<script src="js/technical/ExpantaNum.js"></script>
 	<script src="js/technical/layerSupport.js"></script>
 
 	<script src="js/mod.js"></script>
